// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceList can remove search 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList can remove select all 1`] = `
<Column>
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList custom itemRenderer 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[MockFunction mockedComponent]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[MockFunction mockedComponent]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList custom messages 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Check all"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage="No entries available..."
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList custom noItemsRenderer 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[MockFunction mockedComponent]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList custom searchRenderer 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList custom selectAllRenderer 1`] = `
<Column>
  <mockConstructor
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage={undefined}
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList default snapshot 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList passed filterItems 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={[MockFunction filterItems]}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList passed filteredItems with group 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={
      Array [
        Object {
          "disabled": true,
          "id": "group1",
          "isGroup": true,
          "label": "group1",
        },
        Object {
          "group": "group1",
          "id": 1,
          "label": "item1",
        },
        Object {
          "group": "group1",
          "id": 3,
          "label": "item3",
        },
        Object {
          "disabled": true,
          "id": "group2",
          "isGroup": true,
          "label": "group2",
        },
        Object {
          "group": "group2",
          "id": 2,
          "label": "item2",
        },
      ]
    }
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList passed selectAllItems 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={[MockFunction selectAllItems]}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList passed selectItem 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={[MockFunction selectItem]}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList passed selectedIds 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={
      Array [
        1,
        2,
      ]
    }
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={
      Array [
        1,
        2,
      ]
    }
  />
</Column>
`;

exports[`SourceList passed selectedItems 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList passed source_list wrapped up to HOC withSearch 1`] = `
<SourceList
  calculatedHeight={400}
  disabled={false}
  filteredItems={
    Array [
      Object {
        "group": "group1",
        "id": 1,
        "label": "item1",
      },
    ]
  }
  isAllSelected={false}
  itemHeight={10}
  itemRenderer={[MockFunction mockedComponent]}
  listRenderer={[Function]}
  messages={
    Object {
      "clearAllMessage": "Uncheck all",
      "noItemsMessage": "No entries available...",
      "noneSelectedMessage": "Nothing",
      "searchPlaceholder": "Find...",
      "selectAllMessage": "Check all",
      "selectedMessage": "Checked",
    }
  }
  noItemsRenderer={[Function]}
  selectAllHeight={60}
  selectAllItems={[MockFunction selectAllItems]}
  selectAllRenderer={[Function]}
  selectedIds={
    Array [
      1,
    ]
  }
  selectedItems={
    Array [
      1,
    ]
  }
  showSelectAll={true}
  withGrouping={true}
>
  <Search
    onChange={[MockFunction filterItems]}
    searchIcon={[Function]}
    searchPlaceholder="Find..."
    value="1"
  />
</SourceList>
`;

exports[`SourceList show max selection tooltip 1`] = `
<Column>
  <SelectAll
    height={40}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip="You can select up to 4 items"
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList will pass itemHeight 1`] = `
<Column>
  <SelectAll
    height={10}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={10}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList will pass selectAllHeight 1`] = `
<Column>
  <SelectAll
    height={60}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={10}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`SourceList will pass selectAllHeight without itemHeight 1`] = `
<Column>
  <SelectAll
    height={60}
    isAllSelected={false}
    onClick={undefined}
    renderer={[Function]}
    selectAllMessage="Select All"
    selectedIds={Array []}
  />
  <ItemsList
    disabled={false}
    disabledItemsTooltip={undefined}
    height={400}
    isLocked={undefined}
    itemHeight={40}
    items={Array []}
    listRenderer={[Function]}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={1}
    onClick={undefined}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;
